Cloud stats done

--- a/templates/e.html
+++ b/templates/e.html
@@ -1,26 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blockfront historical</title>
-    <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/master.css')}}"/>
-    <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/index.css')}}"/>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
-<body>
-    <nav>
-        <div id="menu">
-            <h1>Blockfront Historical</h1>
-            <ul id="topinfo">
-                <li><strong>{{players_online}}</strong> players online</li>
-                <li>Last updated: {{last_updated}} minutes ago</li>
-                <li><a href="https://github.com/seth-the-cat">Github</a></li>
-            </ul>
-        </div>
-    </nav>
-    <main>
-    <div id="myplot"></div>
+<style>
+    html {
+        color: white;
+        background-color: black;
+    }
+</style>
+<div id="myplot"></div>
 <script type="module">
 
 import * as Plot from "https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6/+esm";
@@ -81,6 +66,3 @@ const div = document.querySelector("#myplot");
 div.append(plot);
 
 </script>
-</main>
-</body>
-</html>
