fixed create conn logic to not spam already existing table errors
Added fetch data on start. This works in dev but not on docker. I have idea why, but don't know how to fix.

Also the last updated text reloads page

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
             <h1>Blockfront Historical</h1>
             <ul id="topinfo">
                 <li><strong>{{players_online}}</strong> players online</li>
-                <li>Last updated: {{last_updated}} minutes ago</li>
+                <li onclick="location.reload()" style="cursor: pointer">Last updated: {{last_updated}} minutes ago</li>    
                 <li><a href="https://github.com/seth-the-cat/py_bf_historical">Github</a></li>
             </ul>
         </div>
