fix negative last updated time

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
                 <li><a href="https://github.com/seth-the-cat/py_bf_historical">Github</a></li>
             </ul>
             <script>
-                const lastUpdated = new Date("{{last_updated}}Z");
+                const lastUpdated = new Date("{{last_updated}}");
                 function updateLastUpdated() {
                     const now = new Date();
                     const diffMs = now - lastUpdated;
