404 page + title links to homepage

--- a/static/css/master.css
+++ b/static/css/master.css
@@ -34,10 +34,11 @@ html, body {
 
 a {
     color: white;
+    text-decoration: none;
 }
 
-#title {
-    text-decoration: none;
+a h1 {
+    box-sizing: border-box;
     margin: 0;
 }
 
