--- a/templates/match.html
+++ b/templates/match.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <div id="menu">
-            <h1>Blockfront Historical</h1>
+            <h1><a href="{{url_for('index')}}">Blockfront historical</a></h1>
             <ul id="topinfo">
                 <li>{{players_in_match|safe}}</li>   
                 <li><a href="https://github.com/seth-the-cat/py_bf_historical">Github</a></li>
