--- a/templates/addplayer.html
+++ b/templates/addplayer.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <div id="menu">
-            <h1>Blockfront Historical</h1>
+            <h1><a href="{{url_for('index')}}">Blockfront historical</a></h1>
             <ul id="topinfo">
                 <li><strong>{{players_online}}</strong> players online</li>
                 <li id="last_update"></li>
